<resources>
    <string name="app_name">ECommerce</string>

    <string name="content_description">image</string>
    <string name="login">LOGIN</string>
    <string name="hint_email">Email ID</string>
    <string name="hint_password">Password</string>

    <string name="register">REGISTER</string>

    <string name="err_msg_first_name">Please enter First name</string>
    <string name="err_msg_last_name">Please enter Last name</string>
    <string name="err_msg_email">Please enter Email</string>
    <string name="err_msg_password">Please enter Password</string>
    <string name="err_msg_password_confirm">Please enter Password confirm</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Please confirm Password</string>
    <string name="err_msg_check_condition">Please agree terms and condition</string>

    <string name="please_wait">Please wait&#82300;</string>

    <string name="forgot_password">Enter your username and e-mail address. we wll send you a email to reset your password.</string>

</resources>
